<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meditation+</string>
    <string name="profile">Profile</string>
    <string name="new_commit">New Commitment</string>
    <string name="preferences">Preferences</string>
    <string name="title_section1">Meditation</string>
    <string name="title_section2">Chat</string>
    <string name="title_section3">Commit</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="sitting">Sitting</string>
    <string name="walking">Walking</string>
    <string name="sitting_label">Sitting:</string>
    <string name="walking_label">Walking:</string>

    <string name="no_internet">No network connection</string>
    <string name="error">Error</string>
    <string name="error_logging">Error logging in</string>
    <string name="error_registering">Error registering</string>
    <string name="success">Succeeded</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="commit">Commit</string>
    <string name="start">Start</string>
    <string name="empty_list">No one is currently meditating.</string>
    <string name="online">Online: </string>
    <string name="uncommit">Uncommit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="smily">:)</string>
    <string name="registered">Registered successfully!</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="country">Country</string>
    <string name="action_profile">Profile</string>
    <string name="s_profile">%s\'s Profile</string>
    <string name="technical_prefs">Technical</string>
    <string name="refresh_period_desc">Number of seconds after which to check for new data</string>
    <string name="refresh_period">Refresh Period</string>
    <string name="action_edit">Edit</string>
    <string name="full_refresh_period">Full Refresh Period</string>
    <string name="full_refresh_period_desc">Number of seconds after which to do a full refresh, regardless of whether there is new data</string>
    <string name="action_save">Save</string>
    <string name="show_email">Show Email To Other Users</string>
    <string name="name_too_long">Username too long (4-20 chars)</string>
    <string name="name_too_short">Username too short (4-20 chars)</string>
    <string name="about_too_long"><![CDATA[About text too long (>255 chars)]]></string>
    <string name="email_too_long"><![CDATA[Email address too long (>50 chars)]]></string>
    <string name="website_too_long"><![CDATA[Website URL too long (>100 chars)]]></string>
    <string name="message_too_long"><![CDATA[Message too long (>500 chars)]]></string>
    <string name="commited_x">Committed: %s</string>
    <string name="you_commit_x">You have completed %d%% of your commitment.</string>
    <string name="action_htm">Guide</string>
    <string name="type_commit">Type of commitment:</string>
    <string name="type_total">Total</string>
    <string name="type_repeat">Repeat</string>
    <string name="dow">Day of Week:</string>
    <string name="period">Period:</string>
    <string name="desc">Description:</string>
    <string name="title">Title:</string>
    <string name="dom">Day of Month:</string>
    <string name="doy">Day of Year:</string>
    <string name="spec_time">Specific Time</string>
    <string name="time">Time:</string>
    <string name="utc">(24-hour time UTC)</string>
    <string name="amount">Amount</string>
    <string name="committed">Committed:</string>
    <string name="minutes">(minutes)</string>
    <string name="edit_commit">Edit Commitment</string>
    <string name="alarm_title">Meditation Alarm</string>
    <string name="alarm_desc">%1$s for %2$d minutes finished</string>
    <string name="timer_done">timer finished</string>
    <string name="alarm_prefs">Alarm Preferences</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="none">None</string>
    <string name="play_sound">Play Sound</string>
    <string name="play_sound_desc">Test current alarm sound</string>
    <string name="input_text">Input Text</string>
    <string name="input_text_desc">use %%s for type and %%d for time</string>
    <string name="stop_sound">Stop Sound</string>
    <string name="stop_playing_sound">stop currently playing sound</string>
    <string name="status">Status</string>
    <string name="processing">Processing</string>
    <string name="loading_message">Please wait…</string>
    <string name="no_message">No message to send</string>
    <string name="no_time">Meditating for zero minutes not allowed.</string>
    <string name="help_title">Meditation+ Help</string>
    <string name="help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="coming_event">%1$s is starting in %2$d minutes</string>
    <string name="coming_event_1">%1$s is starting in 1 minute</string>
    <string name="coming_commit">You have a commitment starting in %d minutes</string>
    <string name="coming_commit_1">You have a commitment starting in 1 minute</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_vibrate_desc">provide haptic feedback for alarm</string>
    <string name="alarm_led">Blink LED</string>
    <string name="alarm_led_desc">Cause the LED light to blink when the alarm goes off</string>
    <string name="profile_log">Meditation Graph (past seven days)</string>
    <string name="share">Share</string>
    <string name="invalid_hour">Invalid hour entry</string>
    <string name="invalid_min">Invalid minute entry</string>
    <string name="invalid_amount">Invalid amount entry</string>
    <string name="invalid_walking">Invalid walking entry</string>
    <string name="invalid_sitting">Invalid sitting entry</string>
    <string name="invalid_doy">Invalid day of year entry</string>
    <string name="invalid_dom">Invalid day of month entry</string>
    <string name="missing_title">Title entry required</string>
    <string name="long_desc">Description too long (200 char max)</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set_alarm_desc">Create notifications for the end of walking and sitting</string>
    <string name="avatar">Avatar URL</string>
    <string name="avatar_desc">if empty, will use email to determine a gravatar from www.gravatar.com</string>
    <string name="long_title">Title entry too long (20 char max)</string>
    <string name="alarm_led_color">LED Colour</string>
    <string name="alarm_led_color_desc">Use HTML color codes (e.g. #FFFFFF for white)</string>
    <string name="playing_live">Live feed now playing…</string>
    <string name="live_available">Live feed available (click to play)</string>
    <string name="live_playing">Live feed playing (click to stop)</string>
    <string name="live_connecting">Live feed connecting… (click to cancel)</string>
    <string name="stop">Stop</string>
    <string name="anu">+1</string>
    <string name="sit">Sit</string>
    <string name="walk">Walk</string>
    <string name="now">Now</string>
    <string name="from">From</string>
    <string name="logout_desc">Click to log the current user out of the system</string>
    <string name="action_schedule">Schedule</string>
    <string name="no_schedule">There are currently no scheduled events.</string>
    <string name="time_now_x">The time now is %sh UTC</string>
    <string name="save">Save</string>
    <string name="quote">Quote</string>
    <string name="sadhu">Sadhu!</string>

</resources>
