<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/technical_prefs">
        <EditTextPreference
            android:inputType="number"
            android:title="@string/refresh_period"
            android:summary="@string/refresh_period_desc"
            android:key="refresh_period"
            android:defaultValue="10"
            />
        <EditTextPreference
            android:inputType="number"
            android:title="@string/full_refresh_period"
            android:summary="@string/full_refresh_period_desc"
            android:key="full_refresh_period"
            android:defaultValue="60"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/alarm_prefs">
        <ListPreference
            android:title="@string/alarm_tone"
            android:summary="@string/none"
            android:key="notification_uri"
            android:defaultValue="none"
            />
        <Preference
            android:title="@string/play_sound"
            android:summary="@string/play_sound_desc"
            android:key="play_sound"
            />
        <CheckBoxPreference
            android:title="@string/alarm_vibrate"
            android:summary="@string/alarm_vibrate_desc"
            android:key="alarm_vibrate"
            />
        <CheckBoxPreference
            android:title="@string/alarm_led"
            android:summary="@string/alarm_led_desc"
            android:key="alarm_led"
            />
    </PreferenceCategory>
</PreferenceScreen>
