<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity" >
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="70"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_htm"
        android:title="@string/action_htm"
        android:orderInCategory="80"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="110"
        app:showAsAction="never" />
</menu>
