<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/walk_head"
            android:text="@string/walking"
            android:layout_width="@dimen/med_head_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/sit_head"
            android:text="@string/sitting"
            android:layout_width="@dimen/med_head_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/med_cell_padding"
            android:gravity="center"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/name_head"
            android:text="@string/username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/med_cell_padding"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AA000000"
        />
    <ListView
        android:id="@+id/med_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />
    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/empty_list" />
    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AA000000"
        />
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11000000"
        >
        <TextView
            android:text="@string/walking_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            />
        <NumberPicker
            android:id="@+id/walking_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            />
        <TextView
            android:text="@string/sitting_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            />
        <NumberPicker
            android:id="@+id/sitting_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/med_send"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:id="@+id/med_cancel"
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
</LinearLayout>
