<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_label"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_field"
            android:inputType="text"
            android:singleLine="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc_label"
            android:text="@string/desc"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/desc_field"
            android:inputType="textMultiLine"
            android:gravity="top"
            />
        <ImageView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/num_picker_separator"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/period_label"
            android:text="@string/period"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            />
        <Spinner
            android:id="@+id/period_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/num_picker_separator"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_label"
            android:text="@string/type_commit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            />
        <RadioGroup
            android:id="@+id/type_radios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/type_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_total_label"
                android:text="@string/type_total"
                />
            <RadioButton
                android:id="@+id/type_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_repeat_label"
                android:text="@string/type_repeat"
                />
        </RadioGroup>
        <LinearLayout
            android:id="@+id/amount_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/amount_label"
                android:text="@string/amount"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/amount_field"
                android:inputType="number"
                android:singleLine="true"
                />
            <ImageView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/num_picker_separator"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/repeat_amount_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeat_amount_label"
                android:text="@string/amount"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/walking_label"
                    android:text="@string/walking_label"
                    />
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/walking_field"
                    android:inputType="number"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sitting_label"
                    android:text="@string/sitting_label"
                    />
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sitting_field"
                    android:inputType="number"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <ImageView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/num_picker_separator"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dow_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dow_label"
                android:text="@string/dow"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <Spinner
                android:id="@+id/dow_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/num_picker_separator"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dom_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dom_label"
                android:text="@string/dom"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/dom_field"
                android:inputType="number"
                android:singleLine="true"
                />
            <ImageView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/num_picker_separator"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/doy_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/doy_label"
                android:text="@string/doy"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/doy_field"
                android:inputType="number"
                android:singleLine="true"
                />
            <ImageView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/num_picker_separator"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/spec_time_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/spec_time_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spec_time_label"
                android:text="@string/spec_time"
                />
            <LinearLayout
                android:id="@+id/time_shell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_label"
                    android:text="@string/time"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/hour_field"
                    android:inputType="number"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_colon"
                    android:text=":"
                    />
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/min_field"
                    android:inputType="number"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_utc"
                    android:text="@string/utc"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
