<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#FF666666"
        android:textColor="@android:color/white"
        android:padding="10dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_label"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_field"
                android:inputType="text"
                android:singleLine="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/about_label"
                android:text="@string/about"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/about_field"
                android:inputType="textMultiLine"
                android:gravity="top"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_label"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_field"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_email_label"
                android:text="@string/show_email"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_email_field"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/website_label"
                android:text="@string/website"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/website_field"
                android:inputType="textUri"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:id="@+id/country_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="10dp"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/country_field"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>